# Finance-project

./: .env.example  .gitignore  Caddyfile  Makefile  compose.prod.yaml  compose.yaml
.superpowers/sdd/: final-fix-report.md  task-3-report.md  task-4-report.md  task-6-report.md  task-7-report.md
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_foundation.py
apps/api/src/moneyflow/: bootstrap.py  config.py  db.py  logging.py  main.py  models.py
apps/api/src/moneyflow/auth/: __init__.py  routes.py  service.py
apps/api/src/moneyflow/telegram/: __init__.py  parser.py  router.py  webhook.py
apps/api/src/moneyflow/transactions/: __init__.py  repository.py  routes.py  schemas.py  service.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_auth.py  test_bootstrap.py  test_migrations.py  test_telegram_webhook.py  test_transactions.py
apps/api/tests/unit/: test_auth_routes.py  test_auth_service.py  test_config.py  test_database_safety.py  test_deployment_security.py  test_health.py  test_logging.py  test_simple_parser.py  test_telegram_router.py  test_transaction_repository.py  test_transaction_service.py
apps/web/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  main.tsx  (+1 more)
ops/: backup.sh  deploy.md  release-0-checklist.md  restore-check.sh
ops/systemd/: moneyflow-backup.service  moneyflow-backup.timer
tests/e2e/: package.json  playwright.config.ts  pnpm-lock.yaml  vertical-slice.spec.ts
(+10 files in other folders)
